#43: add hapi-bom module